# load_manager

./: .gitignore  CMakeLists.txt  Makefile
source/: custom_popen.c  custom_popen.h  insmod.c  insmod.h  is_module_loaded.c  is_module_loaded.h  rmmod.c  rmmod.h
